--- a/about-us/about-us.html
+++ b/about-us/about-us.html
@@ -16,8 +16,8 @@
     <ul class="navLinks">
         <li><a href="/index.html">HOME</a></li>
         <li><a href="/services/services.html">OUR SERVICES</a></li>
-        <li><a>BOOK A SERVICE</a></li>
-        <li><a href="/about-us/about-us.html">ABOUT US</a></li>
+        <li><a href="/book-service/book-service.html">BOOK A SERVICE</a></li>
+        <li><a>ABOUT US</a></li>
         <li class="mobileNavNumber"><a href="tel:0449983729">0449 983 729</a></li>
     </ul>
     <div class="menuIcon">
@@ -38,15 +38,29 @@
 </nav>
 <main>
     <section>
-        <div class="about-us">
-          <img src="profile.jpg"/>
-          <div>
-            <h3>About us</h3>
-            <p>
-              At Razry Electrical and Data, our mission is to provide reliable and innovative electrical solutions that empower our clients and enhance their lives. With a commitment to safety, integrity, and exceptional craftsmanship, we strive to exceed expectations in every project. Our skilled team of electricians is dedicated to delivering superior service, fostering lasting relationships, and contributing to the overall well-being of the communities we serve. We are driven by a passion for excellence, continuous learning, and staying at the forefront of technological advancements in the electrical industry. At Razry Electrical and Data, we illuminate the path to a brighter, safer, and more energy-efficient future for our clients and the environments we work in.
-            </p>
-          </div>
+      <div class="mission-container">
+        <img src="/about-us/images/Jamie.webp"/>
+        <div class="mission-statement">
+          <h2>Mission</h2>
+          <p>At Razyr Electrical and Data, we're dedicated to lighting up your world with precision, safety, and innovation. Committed to excellence, we deliver top-tier electrical solutions to power your present and future needs.</p>
         </div>
+      </div>
+
+        <div class="about-us-container">
+          <div class="about-us-statement">
+            <div>
+              <h2>Zaryk Ray</h2>
+              <h3>Director</h3>
+            </div>
+            <p>I grew up in the south-eastern suburbs of Melbourne in a family that valued hard work, honesty, Integrity, never forgetting where we came from and the importance of striving for greatness. These early experiences inspired me to create 25/8 Electrical, a company focused on making a positive impact in people’s lives and ensuring a better future.
+              My journey in the electrical field began in 2016 when I started working with Paul Sartori at Sartori Electrical. Paul taught me the essential skills and safety principles that every good electrician needs to know. I worked in various places, from homes to businesses, and even large industrial sites with powerful machines.
+              During my apprenticeship, I made sure to learn as much as I could about all aspects of electrical work. I gained experience in different environments, which makes me confident in taking on any job, no matter how big or small.
+              After finishing my apprenticeship, I continued my education at Technical Training Australia. There, I studied hard and earned a license that allows me to work as a registered electrical contractor. Staying connected with Technical Training Australia helps me stay up-to-date with the latest industry standards, ensuring a safe workplace for all our current and future employees.
+              Now, I’m proud to showcase the result of my hard work and passion. By combining my interest in business and finance with my dedication to electrical safety, I aim to create a safer electrical future for everyone. It’s an honour for me to share this journey, as it represents not only my personal dreams but also my commitment to the well-being and security of all individuals.</p>
+          </div>
+          <img src="/about-us/images/Jamie.webp"/>
+        </div>
+
     </section>
 </main>
 
