--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
         <div class="navLogo"
         >
-        <a href="/index.html"><img src="/logos/round-logo.jpg" alt="Rayzr Logo"></a>
+        <a href="index.html"><img src="logos/round-logo.jpg" alt="Rayzr Logo"></a>
         </div>
         <ul class="navLinks">
             <li><a href="/index.html">HOME</a></li>
