--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rayzr Electical and Data</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
   <body>
     <nav>
         <div class="navLogo"
         >
-        <a href="/index.html"><img src="logos/round-logo.jpg" alt="Rayzr Logo"></a>
+        <a href="index.html"><img src="logos/round-logo.jpg" alt="Rayzr Logo"></a>
         </div>
         <ul class="navLinks">
-            <li><a href="/index.html">HOME</a></li>
-            <li><a href="./services/services.html">OUR SERVICES</a></li>
-            <li><a href="/book-service/book-service.html">BOOK A SERVICE</a></li>
-            <li><a href="/about-us/about-us.html">ABOUT US</a></li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="services/services.html">OUR SERVICES</a></li>
+            <li><a href="book-service/book-service.html">BOOK A SERVICE</a></li>
+            <li><a href="about-us/about-us.html">ABOUT US</a></li>
             <li class="mobileNavNumber"><a href="tel:0449983729">0449 983 729</a></li>
           </ul>
         <div class="menuIcon">
@@ -70,7 +70,7 @@
                 <a href="book-service/book-service.html">BOOK NOW</a>
               </div>
             </div>
-            <a href="./services/services.html" class="exploreServicesButton">EXPLORE OUR FULL RANGE OF SERVICES</a>
+            <a href="services/services.html" class="exploreServicesButton">EXPLORE OUR FULL RANGE OF SERVICES</a>
         </section>
 
         <section style="background-color: #252C2C;">
