--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <nav>
         <div class="navLogo"
         >
-        <a href="index.html"><img src="logos/round-logo.jpg" alt="Rayzr Logo"></a>
+        <a href="/index.html"><img src="logos/round-logo.jpg" alt="Rayzr Logo"></a>
         </div>
         <ul class="navLinks">
-            <li><a href="index.html">HOME</a></li>
+            <li><a href="/index.html">HOME</a></li>
             <li><a href="services/services.html">OUR SERVICES</a></li>
             <li><a href="book-service/book-service.html">BOOK A SERVICE</a></li>
             <li><a href="about-us/about-us.html">ABOUT US</a></li>
