--- a/book-service/book-service.html
+++ b/book-service/book-service.html
@@ -1,42 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Rayzr Electical and Data</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
-  </head>
-  <body>
-    <nav>
-        <div class="navLogo"
-        >
-        <a href="/index.html"><img src="logos/round-logo.jpg" alt="Rayzr Logo"></a>
-        </div>
-        <ul class="navLinks">
-            <li><a href="/index.html">HOME</a></li>
-            <li><a href="services/services.html">OUR SERVICES</a></li>
-            <li><a href="book-service/book-service.html">BOOK A SERVICE</a></li>
-            <li><a href="about-us/about-us.html">ABOUT US</a></li>
-            <li class="mobileNavNumber"><a href="tel:0449983729">0449 983 729</a></li>
-          </ul>
-        <div class="menuIcon">
-          <div class="line1"></div>
-          <div class="line2"></div>
-        </div>
-        <div class="pulsing-svg-container">
-          <svg class="pulsing-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="#fd0808">
-              <path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"/>
-          </svg>
-          <div class="text-container">
-            <a class="contactNumber" href="tel:0449983729">
-              0449 983 729
-            </a>
-              <span class="emergency-assist">24/7 emergency assist</span>
-          </div>
+    <title>Razyr Electrical and Data - Our Services</title>
+    <link rel="stylesheet" href="./styles.css">
+</head>
+<body>
+
+<nav>
+    <div class="navLogo"
+    >
+      <a href="/index.html"><img src="/logos/round-logo.jpg" alt="Rayzr Logo"></a>
+    </div>
+    <ul class="navLinks">
+        <li><a href="/index.html">HOME</a></li>
+        <li><a href="/services/services.html">OUR SERVICES</a></li>
+        <li><a>BOOK A SERVICE</a></li>
+        <li><a href="/about-us/about-us.html">ABOUT US</a></li>
+        <li class="mobileNavNumber"><a href="tel:0449983729">0449 983 729</a></li>
+    </ul>
+    <div class="menuIcon">
+      <div class="line1"></div>
+      <div class="line2"></div>
+    </div>
+    <div class="pulsing-svg-container">
+      <svg class="pulsing-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="#fd0808">
+          <path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"/>
+      </svg>
+      <div class="text-container">
+        <a class="contactNumber" href="tel:0449983729">
+          0449 983 729
+        </a>
+          <span class="emergency-assist">24/7 emergency assist</span>
       </div>
-    </nav>
+  </div>
+</nav>
 <main>
     <section>
      <div class="booking-form">
