--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <ul class="navLinks">
             <li><a href="./index.html">HOME</a></li>
             <li><a href="/services/services.html">OUR SERVICES</a></li>
-            <li><a href="book-service/book-service.html">BOOK A SERVICE</a></li>
-            <li><a href="RazyrElectrical/about-us/about-us.html">ABOUT US</a></li>
+            <li><a href="/book-service/book-service.html">BOOK A SERVICE</a></li>
+            <li><a href="/about-us/about-us.html">ABOUT US</a></li>
             <li class="mobileNavNumber"><a href="tel:0449983729">0449 983 729</a></li>
           </ul>
         <div class="menuIcon">
