--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <ul class="navLinks">
             <li><a href="./index.html">HOME</a></li>
             <li><a href="./services/services.html">OUR SERVICES</a></li>
-            <li><a href="RazyrElectrical/book-service/book-service.html">BOOK A SERVICE</a></li>
-            <li><a href="/about-us/about-us.html">ABOUT US</a></li>
+            <li><a href="./book-service/book-service.html">BOOK A SERVICE</a></li>
+            <li><a href="./about-us/about-us.html">ABOUT US</a></li>
             <li class="mobileNavNumber"><a href="tel:0449983729">0449 983 729</a></li>
           </ul>
         <div class="menuIcon">
@@ -40,7 +40,7 @@
     <main>
         <header>
           <div class="headerContent">
-            <img src="logos/rayzr_heading.jpg" alt="Razyr Logo"/>
+            <img src="./logos/rayzr_heading.jpg" alt="Razyr Logo"/>
             <div class="headerDivider"></div>
             <p>COMMERCIAL | DOMESTIC | DATA</p>
             <div class="headerButtons">
@@ -57,20 +57,20 @@
               <div class="serviceCard">
                 <h3>ELECTRICAL SAFETY SERVICE</h3>
                 <p>Our Electrical Safety Service ensures compliance with Victoria's regulations, providing peace of mind for renters, owners, and managers. We offer comprehensive inspections, specialized tests, and proactive component replacements. Stay safe and compliant with our service, conducted by licensed electricians every two years.</p>
-                <a href="book-service/book-service.html">BOOK NOW</a>
+                <a href="./book-service/book-service.html">BOOK NOW</a>
               </div>
               <div class="serviceCard">
                 <h3>SMOKE ALARM SAFETY SERVICE</h3>
                 <p>Our Smoke Alarm Safety Service ensures your home is equipped for safety and compliance. We conduct thorough inspections, replace batteries and faulty detectors, and check their efficacy. Protect lives and properties with our comprehensive service, aligned with Australian regulations and standards.</p>
-                <a href="book-service/book-service.html">BOOK NOW</a>
+                <a href="./book-service/book-service.html">BOOK NOW</a>
               </div>
               <div class="serviceCard">
                 <h3>IN-PERSON INSPECTION AND QUOTE</h3>
                 <p>At 25/8 Electrical, we understand that every electrical project is unique, which is why we offer personalised, in-person quotes, reports, and electrical inspections tailored to your specific needs. Our team is committed to ensuring the safety and efficiency of your electrical systems.</p>
-                <a href="book-service/book-service.html">BOOK NOW</a>
+                <a href="./book-service/book-service.html">BOOK NOW</a>
               </div>
             </div>
-            <a href="services/services.html" class="exploreServicesButton">EXPLORE OUR FULL RANGE OF SERVICES</a>
+            <a href="./services/services.html" class="exploreServicesButton">EXPLORE OUR FULL RANGE OF SERVICES</a>
         </section>
 
         <section style="background-color: #252C2C;">
@@ -187,7 +187,7 @@
     <footer>
       <div class="footer-content">
           <div class="social-links">
-              <img src="logos/Logo-02.svg">
+              <img src="./logos/Logo-02.svg">
               <div class="social-links-icons">
                 <a href="https://www.instagram.com/rayzr_electrical/" target="_blank" rel="noopener noreferrer"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#0cb8c3" d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg></a>
                 <a href="https://www.facebook.com/profile.php?id=100090254945532" target="_blank" rel="noopener noreferrer"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#0cb8c3" d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64h98.2V334.2H109.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H255V480H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64z"/></svg></a>
