--- a/services/services.html
+++ b/services/services.html
@@ -11,13 +11,13 @@
 <nav>
     <div class="navLogo"
     >
-      <a href="./index.html"><img src="./logos/round-logo.jpg" alt="Rayzr Logo"></a>
+      <a href="/index.html"><img src="logos/round-logo.jpg" alt="Rayzr Logo"></a>
     </div>
     <ul class="navLinks">
         <li><a href="./index.html">HOME</a></li>
         <li><a>OUR SERVICES</a></li>
-        <li><a href="/book-service/book-service.html">BOOK A SERVICE</a></li>
-        <li><a href="/about-us/about-us.html">ABOUT US</a></li>
+        <li><a href="./book-service/book-service.html">BOOK A SERVICE</a></li>
+        <li><a href="./about-us/about-us.html">ABOUT US</a></li>
         <li class="mobileNavNumber"><a href="tel:0449983729">0449 983 729</a></li>
     </ul>
     <div class="menuIcon">
