--- a/services.html
+++ b/services.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Razyr Electrical and Data - Our Services</title>
-    <link rel="stylesheet" href="/services/styles.css">
+    <link rel="stylesheet" href="./services/styles.css">
 </head>
 <body>
 
 <nav>
     <div class="navLogo"
     >
-      <a href="/index.html"><img src="logos/round-logo.jpg" alt="Rayzr Logo"></a>
+      <a href="./index.html"><img src="logos/round-logo.jpg" alt="Rayzr Logo"></a>
     </div>
     <ul class="navLinks">
         <li><a href="./index.html">HOME</a></li>
@@ -42,14 +42,14 @@
 
         <div class="servicesContainer">
             <div class="service">
-                <img src="servicesPhotos/Smoke-Alarm_banner_H4orce.webp" alt="Service 1 Image">
+                <img src="/servicesPhotos/Smoke-Alarm_banner_H4orce.webp" alt="Service 1 Image">
                 <h3>ELECTRICAL SAFETY SERVICE</h3>
                 <p>Our Electrical Safety Service ensures compliance with Victoria's regulations, providing peace of mind for renters, owners, and managers. We offer comprehensive inspections, specialized tests, and proactive component replacements. Stay safe and compliant with our service, conducted by licensed electricians every two years.</p>
-                <a href="book-service/book-service.html">Book now</a>
+                <a href="./book-service/book-service.html">Book now</a>
             </div>
     
             <div class="service">
-                <img src="servicesPhotos/Smoke-Alarm_banner_H4orce.webp" alt="Service 1 Image">
+                <img src="/servicesPhotos/Smoke-Alarm_banner_H4orce.webp" alt="Service 1 Image">
                 <h3>SMOKE ALARM SAFETY SERVICE</h3>
                 <p>Our Smoke Alarm Safety Service ensures your home is equipped for safety and compliance. We conduct thorough inspections, replace batteries and faulty detectors, and check their efficacy. Protect lives and properties with our comprehensive service, aligned with Australian regulations and standards.</p>
                 <a href="book-service/book-service.html">Book now</a>
