--- a/services.html
+++ b/services.html
@@ -42,87 +42,87 @@
 
         <div class="servicesContainer">
             <div class="service">
-                <img src="/servicesPhotos/Smoke-Alarm_banner_H4orce.webp" alt="Service 1 Image">
+                <img src="servicesPhotos/Smoke-Alarm_banner_H4orce.webp" alt="Service 1 Image">
                 <h3>ELECTRICAL SAFETY SERVICE</h3>
                 <p>Our Electrical Safety Service ensures compliance with Victoria's regulations, providing peace of mind for renters, owners, and managers. We offer comprehensive inspections, specialized tests, and proactive component replacements. Stay safe and compliant with our service, conducted by licensed electricians every two years.</p>
-                <a href="./book-service/book-service.html">Book now</a>
+                <a href="./book-service.html">Book now</a>
             </div>
     
             <div class="service">
-                <img src="/servicesPhotos/Smoke-Alarm_banner_H4orce.webp" alt="Service 1 Image">
+                <img src="servicesPhotos/Smoke-Alarm_banner_H4orce.webp" alt="Service 1 Image">
                 <h3>SMOKE ALARM SAFETY SERVICE</h3>
                 <p>Our Smoke Alarm Safety Service ensures your home is equipped for safety and compliance. We conduct thorough inspections, replace batteries and faulty detectors, and check their efficacy. Protect lives and properties with our comprehensive service, aligned with Australian regulations and standards.</p>
-                <a href="book-service/book-service.html">Book now</a>
+                <a href="./book-service.html">Book now</a>
             </div>  
 
             <div class="service">
                 <img src="servicesPhotos/Smoke-Alarm_banner_H4orce.webp" alt="Service 1 Image">
                 <h3>IN-PERSON INSPECTION AND QUOTE</h3>
                 <p>Our Smoke Alarm Safety Service ensures your home is equipped for safety and compliance. We conduct thorough inspections, replace batteries and faulty detectors, and check their efficacy. Protect lives and properties with our comprehensive service, aligned with Australian regulations and standards.</p>
-                <a href="book-service/book-service.html">Book now</a>
+                <a href="./book-service.html">Book now</a>
             </div>
     
             <div class="service">
                 <img src="servicesPhotos/Smoke-Alarm_banner_H4orce.webp" alt="Service 1 Image">
                 <h3>24/7 EMERGENCY ASSISTANCE</h3>
                 <p>Razyr is here for you 24/7 with emergency electrical assistance. Day or night, our expert technicians are ready to swiftly address any unexpected issues, ensuring the safety and reliability of your electrical systems. Trust Razyr for prompt and reliable solutions whenever you need them the most.</p>
-                <a href="book-service/book-service.html">Book now</a>
+                <a href="./book-service.html">Book now</a>
             </div>
 
             <div class="service">
                 <img src="servicesPhotos/Smoke-Alarm_banner_H4orce.webp" alt="Service 1 Image">
                 <h3>ALL POWER & LIGHTING INSTALLATIONS</h3>
                 <p>Illuminate your world with Razyr's unparalleled expertise in power and lighting installations. Our skilled professionals are dedicated to bringing brilliance to your spaces. Whether it's residential, commercial, or industrial projects, Razyr delivers top-notch electrical solutions tailored to your needs. From seamless power distribution to cutting-edge lighting installations, we ensure efficiency, safety, and a brighter future for your environment</p>
-                <a href="book-service/book-service.html">Book now</a>
+                <a href="./book-service.html">Book now</a>
             </div>
 
             <div class="service">
                 <img src="servicesPhotos/Smoke-Alarm_banner_H4orce.webp" alt="Service 1 Image">
                 <h3>ELECTRICAL FAULT FINDING EXPERTS</h3>
                 <p>When issues arise, our skilled technicians are adept at swiftly identifying and resolving electrical faults. With precision and experience, we diagnose problems, ensuring the safety and reliability of your electrical systems. Trust Razyr for efficient fault finding solutions, keeping your environment powered and secure.</p>
-                <a href="book-service/book-service.html">Book now</a>
+                <a href="./book-service.html">Book now</a>
             </div>
 
             <div class="service">
                 <img src="servicesPhotos/Smoke-Alarm_banner_H4orce.webp" alt="Service 1 Image">
                 <h3>SWITCHBOARD UPGRADES</h3>
                 <p>Experience enhanced safety and efficiency with Razyr's Switchboard Upgrade Services. Modern solutions, seamless transitions—empowering your electrical system for a reliable future.</p>
-                <a href="book-service/book-service.html">Book now</a>
+                <a href="./book-service.html">Book now</a>
             </div>
 
             <div class="service">
                 <img src="servicesPhotos/Smoke-Alarm_banner_H4orce.webp" alt="Service 1 Image">
                 <h3>SMOKE ALARM SERVICE AND INSTALL</h3>
                 <p>Safeguard your space with Razyr's Smoke Alarm Services. Our expert team ensures reliable installations and regular maintenance, providing peace of mind.</p>
-                <a href="book-service/book-service.html">Book now</a>
+                <a href="./book-service.html">Book now</a>
             </div>
 
             <div class="service">
                 <img src="servicesPhotos/Smoke-Alarm_banner_H4orce.webp" alt="Service 1 Image">
                 <h3>TELEPHONE, NETWORKING & ANTENNAS</h3>
                 <p>Razyr connects you seamlessly with our expert Telephone, Networking, and Antenna services. From efficient communication systems to robust networks and antennas, we tailor solutions to meet your connectivity needs. Trust Razyr for reliable installations and optimized performance, keeping you seamlessly connected in the modern world.</p>
-                <a href="book-service/book-service.html">Book now</a>
+                <a href="./book-service.html">Book now</a>
             </div>
 
             <div class="service">
                 <img src="servicesPhotos/Smoke-Alarm_banner_H4orce.webp" alt="Service 1 Image">
                 <h3>TENANCY ELETRICAL INSTALLS</h3>
                 <p>Elevate your space with Razyr's expert Tenancy Electrical Installs. Our skilled professionals tailor electrical solutions to meet the unique needs of your tenancy, ensuring seamless installations for a safe and efficient environment. Trust Razyr to power your space with precision and reliability.</p>
-                <a href="book-service/book-service.html">Book now</a>
+                <a href="./book-service.html">Book now</a>
             </div>
 
             <div class="service">
                 <img src="servicesPhotos/Smoke-Alarm_banner_H4orce.webp" alt="Service 1 Image">
                 <h3>RCD & CIRCUIT BREAKERS</h3>
                 <p>Razyr ensures your safety with cutting-edge RCD (Residual Current Device) and Circuit Breaker solutions. We specialize in reliable installations, offering an extra layer of protection against electrical faults.</p>
-                <a href="book-service/book-service.html">Book now</a>
+                <a href="./book-service.html">Book now</a>
             </div>
 
             <div class="service">
                 <img src="servicesPhotos/Smoke-Alarm_banner_H4orce.webp" alt="Service 1 Image">
                 <h3>CCTVS</h3>
                 <p>Razyr secures your peace of mind with advanced CCTV solutions. Our expert installations provide 24/7 surveillance, deterring potential threats and offering real-time monitoring.</p>
-                <a href="book-service/book-service.html">Book now</a>
+                <a href="./book-service.html">Book now</a>
             </div>
         </div>
     </section>
