--- a/services/services.html
+++ b/services/services.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Razyr Electrical and Data - Our Services</title>
-    <link rel="stylesheet" href="./services/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <nav>
     <div class="navLogo"
     >
-      <a href="./index.html"><img src="logos/round-logo.jpg" alt="Rayzr Logo"></a>
+      <a href="../index.html"><img src="../logos/round-logo.jpg" alt="Rayzr Logo"></a>
     </div>
     <ul class="navLinks">
-        <li><a href="./index.html">HOME</a></li>
+        <li><a href="../index.html">HOME</a></li>
         <li><a>OUR SERVICES</a></li>
         <li><a href="./book-service/book-service.html">BOOK A SERVICE</a></li>
         <li><a href="./about-us/about-us.html">ABOUT US</a></li>
