--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <ul class="navLinks">
             <li><a href="./index.html">HOME</a></li>
-            <li><a href="./services.html">OUR SERVICES</a></li>
+            <li><a href="./services/services.html">OUR SERVICES</a></li>
             <li><a href="./book-service.html">BOOK A SERVICE</a></li>
             <li><a href="./about-us.html">ABOUT US</a></li>
             <li class="mobileNavNumber"><a href="tel:0449983729">0449 983 729</a></li>
