--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rayzr Electical and Data</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
   <body>
     <nav>
         <div class="navLogo"
         >
-        <a href="/index.html"><img src="logos/round-logo.jpg" alt="Rayzr Logo"></a>
+        <a href="./index.html"><img src="./logos/round-logo.jpg" alt="Rayzr Logo"></a>
         </div>
         <ul class="navLinks">
             <li><a href="./index.html">HOME</a></li>
-            <li><a href="./services/services.html">OUR SERVICES</a></li>
+            <li><a href="./services.html">OUR SERVICES</a></li>
             <li><a href="./book-service.html">BOOK A SERVICE</a></li>
             <li><a href="./about-us.html">ABOUT US</a></li>
             <li class="mobileNavNumber"><a href="tel:0449983729">0449 983 729</a></li>
@@ -57,30 +57,30 @@
               <div class="serviceCard">
                 <h3>ELECTRICAL SAFETY SERVICE</h3>
                 <p>Our Electrical Safety Service ensures compliance with Victoria's regulations, providing peace of mind for renters, owners, and managers. We offer comprehensive inspections, specialized tests, and proactive component replacements. Stay safe and compliant with our service, conducted by licensed electricians every two years.</p>
-                <a href="./book-service/book-service.html">BOOK NOW</a>
+                <a href="./book-service.html">BOOK NOW</a>
               </div>
               <div class="serviceCard">
                 <h3>SMOKE ALARM SAFETY SERVICE</h3>
                 <p>Our Smoke Alarm Safety Service ensures your home is equipped for safety and compliance. We conduct thorough inspections, replace batteries and faulty detectors, and check their efficacy. Protect lives and properties with our comprehensive service, aligned with Australian regulations and standards.</p>
-                <a href="./book-service/book-service.html">BOOK NOW</a>
+                <a href="./book-service.html">BOOK NOW</a>
               </div>
               <div class="serviceCard">
                 <h3>IN-PERSON INSPECTION AND QUOTE</h3>
                 <p>At 25/8 Electrical, we understand that every electrical project is unique, which is why we offer personalised, in-person quotes, reports, and electrical inspections tailored to your specific needs. Our team is committed to ensuring the safety and efficiency of your electrical systems.</p>
-                <a href="./book-service/book-service.html">BOOK NOW</a>
+                <a href="./book-service.html">BOOK NOW</a>
               </div>
             </div>
-            <a href="./services/services.html" class="exploreServicesButton">EXPLORE OUR FULL RANGE OF SERVICES</a>
+            <a href="./services.html" class="exploreServicesButton">EXPLORE OUR FULL RANGE OF SERVICES</a>
         </section>
 
         <section style="background-color: #252C2C;">
             <div class="certificates">
               <div class="certificate">
-                  <img src="logos/certificate-check-solid-svgrepo-com.svg"/>
+                  <img src="./logos/certificate-check-solid-svgrepo-com.svg"/>
                   <p>Registered Electrical Contractor REC - 32909</p>
               </div>
               <div class="certificate">
-                <img src="logos/certificate-check-solid-svgrepo-com.svg"/>
+                <img src="./logos/certificate-check-solid-svgrepo-com.svg"/>
                 <p>Registered Electrician</p>
               </div>
             </div>
@@ -177,9 +177,9 @@
         <section class="socialSection">
           <h1>FOLLOW US ON OUR SOCIAL</h1>
           <div class="instaImages">
-            <a href="https://www.instagram.com/rayzr_electrical/"><img  src="socialPhotos/1.jpg"/></a>
-            <a href="https://www.instagram.com/rayzr_electrical/"><img  src="socialPhotos/2.jpg"/></a>
-            <a href="https://www.instagram.com/rayzr_electrical/"><img  src="socialPhotos/3.jpg"/></a>
+            <a href="https://www.instagram.com/rayzr_electrical/"><img  src="./socialPhotos/1.jpg"/></a>
+            <a href="https://www.instagram.com/rayzr_electrical/"><img  src="./socialPhotos/2.jpg"/></a>
+            <a href="https://www.instagram.com/rayzr_electrical/"><img  src="./socialPhotos/3.jpg"/></a>
           </div>
         </section>
     </main>
@@ -204,6 +204,6 @@
       </div>
   </footer>
 
-	<script src="index.js"></script>
+	<script src="./index.js"></script>
   </body>
 </html>
