--- a/book-service.html
+++ b/book-service.html
@@ -40,7 +40,7 @@
     <section>
      <div class="booking-form">
       <h2>Book a service</h2>
-      <form class="contactForm" id="contactForm" action="https://formspree.io/f/mgegyden" method="POST">
+      <form class="contactForm" id="contactForm" action="" method="POST">
         <div class="questionGroup">
           <label>Name</label>
           <input type="text" id="name" name="name" required>  
