--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
               <div class="serviceCard">
                 <h3>ELECTRICAL SAFETY SERVICE</h3>
                 <p>Our Electrical Safety Service ensures compliance with Victoria's regulations, providing peace of mind for renters, owners, and managers. We offer comprehensive inspections, specialized tests, and proactive component replacements. Stay safe and compliant with our service, conducted by licensed electricians every two years.</p>
-                <a href="./book-service.html">BOOK NOW</a>
+                <a href="./book-service.html?service=electrical-safety-service">BOOK NOW</a>
               </div>
               <div class="serviceCard">
                 <h3>SMOKE ALARM SAFETY SERVICE</h3>
                 <p>Our Smoke Alarm Safety Service ensures your home is equipped for safety and compliance. We conduct thorough inspections, replace batteries and faulty detectors, and check their efficacy. Protect lives and properties with our comprehensive service, aligned with Australian regulations and standards.</p>
-                <a href="./book-service.html">BOOK NOW</a>
+                <a href="./book-service.html?service=smoke-alarm-safety-service">BOOK NOW</a>
               </div>
               <div class="serviceCard">
                 <h3>IN-PERSON INSPECTION AND QUOTE</h3>
                 <p>At 25/8 Electrical, we understand that every electrical project is unique, which is why we offer personalised, in-person quotes, reports, and electrical inspections tailored to your specific needs. Our team is committed to ensuring the safety and efficiency of your electrical systems.</p>
-                <a href="./book-service.html">BOOK NOW</a>
+                <a href="./book-service.html?service=in-person-inspection-and-quote">BOOK NOW</a>
               </div>
             </div>
             <a href="./services.html" class="exploreServicesButton">EXPLORE OUR FULL RANGE OF SERVICES</a>
