--- a/about-us.html
+++ b/about-us.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Razyr Electrical and Data - Our Services</title>
     <link rel="stylesheet" href="./about-us/styles.css">
+    <link rel="icon" type="image/x-icon" href="/logos/Logo-02.svg">
 </head>
 <body>
 
