--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           <div class="instaImages">
             <a href="https://www.instagram.com/rayzr_electrical/"><img  src="./socialPhotos/1.jpg"/></a>
             <a href="https://www.instagram.com/rayzr_electrical/"><img  src="./socialPhotos/2.jpg"/></a>
-            <a href="https://www.instagram.com/rayzr_electrical/"><img  src="./socialPhotos/3.jpg"/></a>
+            <a href="https://www.instagram.com/rayzr_electrical/"><img  src="./socialPhotos/3.jfif"/></a>
           </div>
         </section>
     </main>
