--- a/about-us.html
+++ b/about-us.html
@@ -40,7 +40,7 @@
 <main>
     <section>
       <div class="mission-container">
-        <img src="./about-us/images/Jamie.webp"/>
+        <img src="./about-us/images/van.jpeg"/>
         <div class="mission-statement">
           <h2>Mission</h2>
           <p>At Razyr Electrical and Data, we're dedicated to lighting up your world with precision, safety, and innovation. Committed to excellence, we deliver top-tier electrical solutions to power your present and future needs.</p>
@@ -49,17 +49,12 @@
 
         <div class="about-us-container">
           <div class="about-us-statement">
-            <div>
+            <!-- <div>
               <h2>Zaryk Ray</h2>
               <h3>Director</h3>
-            </div>
-            <p>I grew up in the south-eastern suburbs of Melbourne in a family that valued hard work, honesty, Integrity, never forgetting where we came from and the importance of striving for greatness. These early experiences inspired me to create 25/8 Electrical, a company focused on making a positive impact in people’s lives and ensuring a better future.
-              My journey in the electrical field began in 2016 when I started working with Paul Sartori at Sartori Electrical. Paul taught me the essential skills and safety principles that every good electrician needs to know. I worked in various places, from homes to businesses, and even large industrial sites with powerful machines.
-              During my apprenticeship, I made sure to learn as much as I could about all aspects of electrical work. I gained experience in different environments, which makes me confident in taking on any job, no matter how big or small.
-              After finishing my apprenticeship, I continued my education at Technical Training Australia. There, I studied hard and earned a license that allows me to work as a registered electrical contractor. Staying connected with Technical Training Australia helps me stay up-to-date with the latest industry standards, ensuring a safe workplace for all our current and future employees.
-              Now, I’m proud to showcase the result of my hard work and passion. By combining my interest in business and finance with my dedication to electrical safety, I aim to create a safer electrical future for everyone. It’s an honour for me to share this journey, as it represents not only my personal dreams but also my commitment to the well-being and security of all individuals.</p>
+            </div> -->
           </div>
-          <img src="./about-us/images/Jamie.webp"/>
+          <!-- <img src="./about-us/images/Jamie.webp"/> -->
         </div>
 
     </section>
