--- a/book-service.html
+++ b/book-service.html
@@ -41,14 +41,14 @@
     <section>
      <div class="booking-form">
       <h2>Book a service</h2>
-      <form class="contactForm" id="contactForm" action="" method="POST">
+      <form class="contactForm" id="contactForm" action="https://formspree.io/f/mpwawoaw" method="POST">
         <div class="questionGroup">
           <label>Name</label>
           <input type="text" id="name" name="name" required>  
         </div>
         <div class="questionGroup">
           <label>Number</label>
-          <input type="text" id="number" name="number" required>
+          <input type="tel" id="number" name="number" required>
         </div>
         <div class="questionGroup">
           <label>Email</label>
