--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
               <p>or call us on 0449 983 729</p>
             </div>
            
-            <form class="contactForm" id="contactForm" action="" method="POST">
+            <form class="contactForm" id="contactForm" action="https://formspree.io/f/mpwawoaw" method="POST">
                 <input type="hidden" id="subject" name="subject" value="free-online-quote">
-                <input type="text" id="name" name="name" placeholder="Name" required>  
+                <input type="tel" id="name" name="name" placeholder="Name" required>  
                 <input type="text" id="number" name="number" placeholder="Contact Number" required>
                 <input type="email" id="email" name="email" placeholder="Email" required>
                 <textarea id="message" name="message" placeholder="Message" rows="4" required></textarea>
